--- a/src/components/BaseWallpaper.astro
+++ b/src/components/BaseWallpaper.astro
@@ -1,11 +1,11 @@
 ---
-import Snow from "./Snow.astro";
+import Snow from "./Snow.astro"
 ---
 
 <Snow />
 
 <div class="min-h-screen bg-[url(/wallpaper.png)] bg-cover bg-center bg-fixed">
-    <div class="min-h-screen bg-base-100/50">
-        <slot />
-    </div>
+  <div class="min-h-screen bg-base-100/50">
+    <slot />
+  </div>
 </div>
