--- a/src/components/ToggleTheme.astro
+++ b/src/components/ToggleTheme.astro
@@ -1,5 +1,9 @@
 <div class="text-right m-2">
-  <label class="btn btn-square btn-ghost swap swap-rotate" data-toggle-theme="frappe,latte" data-act-class="swap-active">
+  <label
+    class="btn btn-square btn-ghost swap swap-rotate"
+    data-toggle-theme="frappe,latte"
+    data-act-class="swap-active"
+  >
     <!-- sun icon -->
     <svg class="swap-off fill-current w-10 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path
