--- a/src/components/TwitterFollow.astro
+++ b/src/components/TwitterFollow.astro
@@ -1,7 +1,5 @@
 <div class="my-3">
-    <a
-        href="https://twitter.com/imokurity?ref_src=twsrc%5Etfw"
-        class="twitter-follow-button"
-        data-show-count="false">Follow @imokurity</a
-    >
+  <a href="https://twitter.com/imokurity?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false"
+    >Follow @imokurity</a
+  >
 </div>
