--- a/src/components/Utterances.astro
+++ b/src/components/Utterances.astro
@@ -1,11 +1,10 @@
 <div class="mt-5">
-    <script
-        src="https://utteranc.es/client.js"
-        repo="IMOKURI/imokuri-com"
-        issue-term="pathname"
-        label="comment"
-        theme="github-light"
-        crossorigin="anonymous"
-        async
-    ></script>
+  <script
+    src="https://utteranc.es/client.js"
+    repo="IMOKURI/imokuri-com"
+    issue-term="pathname"
+    label="comment"
+    theme="github-light"
+    crossorigin="anonymous"
+    async></script>
 </div>
