--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,9 +20,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
         </div>
       </div>
       <h2 class="my-5 text-2xl">Yoshio Sugiyama - 杉山 禎夫</h2>
-      <div class="my-10 text-justify">
-        日本ヒューレット・パッカードでインフラ/AIエンジニアをしています。
-      </div>
+      <div class="my-10 text-justify">日本ヒューレット・パッカードでインフラ/AIエンジニアをしています。</div>
 
       <h2 class="my-5 text-2xl font-bold">Contact</h2>
       <img src="/mail.png" alt="email" />
