--- a/src/pages/blog/[year]/[month]/[slug].astro
+++ b/src/pages/blog/[year]/[month]/[slug].astro
@@ -12,19 +12,19 @@ import type { CollectionEntry } from "astro:content"
 import { SITE_TITLE } from "../../../../config"
 
 export async function getStaticPaths() {
-    const posts = await getCollection("blog")
-    return posts.map(post => ({
-        params: {
-            year: post.data.date.getFullYear(),
-            month: (post.data.date.getMonth() + 1).toString().padStart(2, "0"),
-            slug: post.id
-        },
-        props: { post }
-    }))
+  const posts = await getCollection("blog")
+  return posts.map(post => ({
+    params: {
+      year: post.data.date.getFullYear(),
+      month: (post.data.date.getMonth() + 1).toString().padStart(2, "0"),
+      slug: post.id
+    },
+    props: { post }
+  }))
 }
 
 interface Props {
-    post: CollectionEntry<"blog">
+  post: CollectionEntry<"blog">
 }
 const { post } = Astro.props
 
@@ -38,72 +38,69 @@ const tab_title = `${title} - ${SITE_TITLE}`
 ---
 
 <BaseLayout twitter="true" title={tab_title}>
-    <DimWallpaper>
-        <NavBar />
-        <ToggleTheme />
-        <main class="container mx-auto w-5/6 lg:w-2/3">
-            <article class="prose max-w-none">
-                {cover_image && <img src={cover_image} alt="" />}
-                <h1>{title}</h1>
-                {
-                    date && (
-                        <div>
-                            Posted on <time>{date.toLocaleDateString()}</time>
-                        </div>
-                    )
-                }
-                {
-                    updated > date && (
-                        <div>
-                            Updated on <time>{updated.toLocaleDateString()}</time>
-                        </div>
-                    )
-                }
-                {
-                    tags && (
-                        <div class="inline">
-                            {tags.map(tag => (
-                                <div class="badge badge-accent badge-soft mr-2">
-                                    <a href={`/tag/${tag}`} class="link link-accent link-hover">
-                                        {tag}
-                                    </a>
-                                </div>
-                            ))}
-                        </div>
-                    )
-                }
-                {
-                    pass_year > 0 && (
-                        <div class="alert alert-warning shadow-lg my-4">
-                            <div>
-                                <svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    class="stroke-current shrink-0 h-6 w-6"
-                                    fill="none"
-                                    viewBox="0 0 24 24"
-                                >
-                                    <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
-                                    />
-                                </svg>
-                                <span>
-                                    この記事は、最終更新日から {pass_year} 年以上経過しています。
-                                    情報が古い可能性があります。
-                                </span>
-                            </div>
-                        </div>
-                    )
-                }
-                <Tweet />
-                <hr />
-                <Content />
-            </article>
-            <Utterances />
-        </main>
-        <Disclaimer />
-        <Footer />
-    </DimWallpaper>
+  <DimWallpaper>
+    <NavBar />
+    <ToggleTheme />
+    <main class="container mx-auto w-5/6 lg:w-2/3">
+      <article class="prose max-w-none">
+        {cover_image && <img src={cover_image} alt="" />}
+        <h1>{title}</h1>
+        {
+          date && (
+            <div>
+              Posted on <time>{date.toLocaleDateString()}</time>
+            </div>
+          )
+        }
+        {
+          updated > date && (
+            <div>
+              Updated on <time>{updated.toLocaleDateString()}</time>
+            </div>
+          )
+        }
+        {
+          tags && (
+            <div class="inline">
+              {tags.map(tag => (
+                <div class="badge badge-accent badge-soft mr-2">
+                  <a href={`/tag/${tag}`} class="link link-accent link-hover">
+                    {tag}
+                  </a>
+                </div>
+              ))}
+            </div>
+          )
+        }
+        {
+          pass_year > 0 && (
+            <div class="alert alert-warning shadow-lg my-4">
+              <div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="stroke-current shrink-0 h-6 w-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
+                  />
+                </svg>
+                <span>この記事は、最終更新日から {pass_year} 年以上経過しています。 情報が古い可能性があります。</span>
+              </div>
+            </div>
+          )
+        }
+        <Tweet />
+        <hr />
+        <Content />
+      </article>
+      <Utterances />
+    </main>
+    <Disclaimer />
+    <Footer />
+  </DimWallpaper>
 </BaseLayout>
