--- a/src/components/Disclaimer.astro
+++ b/src/components/Disclaimer.astro
@@ -1,8 +1,7 @@
 <footer class="footer footer-center p-4">
-    <div>
-        <p>
-            このBlogの内容は個人の意見に基づくものであり、
-            所属組織団体の公式見解とは異なる場合があります点、ご了承ください。
-        </p>
-    </div>
+  <div>
+    <p>
+      このBlogの内容は個人の意見に基づくものであり、 所属組織団体の公式見解とは異なる場合があります点、ご了承ください。
+    </p>
+  </div>
 </footer>
