--- a/src/components/HomeWallpaper.astro
+++ b/src/components/HomeWallpaper.astro
@@ -1,14 +1,14 @@
 ---
-import Snow from "./Snow.astro";
+import Snow from "./Snow.astro"
 ---
 
 <Snow />
 
 <div class="hero min-h-screen bg-[url(/wallpaper.png)]">
-    <div class="hero-overlay bg-base-100/50"></div>
-    <div class="hero-content text-center">
-        <div class="max-w-md">
-            <slot />
-        </div>
+  <div class="hero-overlay bg-base-100/50"></div>
+  <div class="hero-content text-center">
+    <div class="max-w-md">
+      <slot />
     </div>
+  </div>
 </div>
