--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -1,32 +1,24 @@
 ---
-const {
-    title,
-    date,
-    desc,
-    link_title = "More...",
-    link_url = null,
-} = Astro.props;
+const { title, date, desc, link_title = "More...", link_url = null } = Astro.props
 ---
 
 <div class="flex">
-    <div class="education__time">
-        <span class="w-3 h-3 bg-primary block rounded-full mt-2"></span>
-        <span
-            class="education__line bg-primary block h-full w-[2px] translate-x-[5px]"
-        ></span>
-    </div>
-    <div class="experience__data bd-grid px-5">
-        <h3 class="font-semibold text-lg mb-1">{title}</h3>
-        <span class="font-light">{date}</span>
-        <p class="mt-1 mb-4 text-justify">
-            {desc}
-            {
-                link_url && (
-                    <a href={link_url} class="link">
-                        {link_title}
-                    </a>
-                )
-            }
-        </p>
-    </div>
+  <div class="education__time">
+    <span class="w-3 h-3 bg-primary block rounded-full mt-2"></span>
+    <span class="education__line bg-primary block h-full w-[2px] translate-x-[5px]"></span>
+  </div>
+  <div class="experience__data bd-grid px-5">
+    <h3 class="font-semibold text-lg mb-1">{title}</h3>
+    <span class="font-light">{date}</span>
+    <p class="mt-1 mb-4 text-justify">
+      {desc}
+      {
+        link_url && (
+          <a href={link_url} class="link">
+            {link_title}
+          </a>
+        )
+      }
+    </p>
+  </div>
 </div>
