--- a/src/components/Tweet.astro
+++ b/src/components/Tweet.astro
@@ -1,7 +1,3 @@
 <div class="my-2">
-    <a
-        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
-        class="twitter-share-button"
-        data-show-count="false">Post</a
-    >
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Post</a>
 </div>
