--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,13 +28,24 @@ import TwitterFollow from "../components/TwitterFollow.astro"
 
       <div class="card card-border shadow-lg my-10 bg-base-100/80">
         <div class="card-body">
+          <h2 class="card-title text-2xl mb-3">Role</h2>
+          <div class="time-line-container">
+            <TimeLine title="Applied AI Engineer" />
+            <TimeLine title="AI Platform Engineer" />
+          </div>
+        </div>
+      </div>
+
+      <div class="card card-border shadow-lg my-10 bg-base-100/80">
+        <div class="card-body">
           <h2 class="card-title text-2xl mb-3">Skill</h2>
           <div class="time-line-container">
-            <TimeLine title="Machine Learning, Deep Learning" />
+            <TimeLine title="Machine Learning, Deep Learning, Generative AI" />
             <TimeLine title="Data Management" />
             <TimeLine title="Kubernetes, OpenShift" />
-            <TimeLine title="Ansible" />
+            <TimeLine title="Automation, Ansible" />
             <TimeLine title="Python" />
+            <TimeLine title="Git" />
             <TimeLine title="Neovim" />
           </div>
         </div>
@@ -46,10 +57,10 @@ import TwitterFollow from "../components/TwitterFollow.astro"
           <div class="time-line-container">
             <TimeLine title="Ski" />
             <TimeLine title="Futsal" />
-            <TimeLine title="Final Fantasy VII" />
-            <TimeLine title="Quiz" />
+            <TimeLine title="Final Fantasy VII, Tactics" />
             <TimeLine title="F1" />
             <TimeLine title="Rugby" />
+            <TimeLine title="Quiz" />
           </div>
         </div>
       </div>
