--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,9 +67,15 @@ import TwitterFollow from "../components/TwitterFollow.astro"
 
       <div class="card card-border shadow-lg my-10 bg-base-100/80">
         <div class="card-body">
-          <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
+          <h2 class="card-title text-2xl mb-3">Activity</h2>
           <div class="time-line-container">
             <TimeLine title="NVIDIA-Certified Associate - AI Infrastructure and Operations" date="2025/7" />
+            <TimeLine
+              title="担当プロジェクト 公開事例"
+              date="2025/5"
+              link_title="HPEのプライベートAIクラウド「HPE Private Cloud AI」を国内初導入"
+              link_url="https://www.scsk.jp/news/2025/pdf/20250516i.pdf"
+            />
             <TimeLine
               title="イベント登壇 - HPE Discover More AI 東京 2025"
               date="2025/1"
