--- a/src/components/DataPost.astro
+++ b/src/components/DataPost.astro
@@ -12,6 +12,9 @@ const { post } = Astro.props
   <div class="card card-border hover:shadow-2xl shadow-lg hover:scale-[101%] my-10 bg-base-100/80">
     <div class="card-body">
       <h2 class="card-title">{post.data.title}</h2>
+      <p class="text-sm">
+        Updated on {post.data.updated.toLocaleDateString()}
+      </p>
       <p>{post.data.description}</p>
     </div>
   </div>
