--- a/src/pages/activity/data.astro
+++ b/src/pages/activity/data.astro
@@ -7,7 +7,7 @@ import NavBar from "../../components/NavBar.astro"
 import ToggleTheme from "../../components/ToggleTheme.astro"
 import { getCollection } from "astro:content"
 
-const posts = await getCollection("data")
+const posts = (await getCollection("data")).sort((a, b) => b.data.updated.valueOf() - a.data.updated.valueOf())
 ---
 
 <BaseLayout>
