--- a/src/pages/activity/data/[data].astro
+++ b/src/pages/activity/data/[data].astro
@@ -8,7 +8,7 @@ import { getCollection, render } from "astro:content"
 import type { CollectionEntry } from "astro:content"
 
 export async function getStaticPaths() {
-  const posts = await getCollection("data")
+  const posts = (await getCollection("data")).sort((a, b) => b.data.updated.valueOf() - a.data.updated.valueOf())
   return posts.map(post => ({
     params: { data: post.id },
     props: { post }
@@ -31,6 +31,9 @@ const { title } = post.data
     <main class="container mx-auto w-5/6 lg:w-2/3">
       <article class="prose max-w-none">
         <h1>{title}</h1>
+        <p class="text-sm">
+          Updated on {post.data.updated.toLocaleDateString()}
+        </p>
         <hr />
         <Content />
       </article>
