feat: update index page
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/HomeWallpaper.astro
+++ b/src/components/HomeWallpaper.astro
@@ -7,7 +7,7 @@ import Snow from "./Snow.astro"
 <div class="hero min-h-screen bg-[url(/wallpaper.png)]">
   <div class="hero-overlay bg-base-100/50"></div>
   <div class="hero-content text-center">
-    <div class="max-w-md">
+    <div class="max-w-xl">
       <slot />
     </div>
   </div>
