--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,9 @@
 import BaseLayout from "../layouts/BaseLayout.astro"
 import HomeWallpaper from "../components/HomeWallpaper.astro"
 import ToggleTheme from "../components/ToggleTheme.astro"
-import { SITE_TITLE } from "../config"
+import { SITE_TITLE, navBarConfig } from "../config"
+
+const config = navBarConfig
 ---
 
 <BaseLayout>
@@ -10,28 +12,19 @@ import { SITE_TITLE } from "../config"
     <ToggleTheme />
     <main>
       <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
-      <p class="mb-2 text-lg">Hi, I'm Yoshio Sugiyama.<br>Applied AI Engineer / AI Platform Engineer at HPE Japan.</p>
-      <div class="tooltip tooltip-bottom" data-tip="About Me">
-        <a href="/about">
-          <button class="btn btn-ghost text-lg" aria-label="About Me">
-            <i class="fa-solid fa-user"></i>
-          </button>
-        </a>
-      </div>
-      <div class="tooltip tooltip-bottom" data-tip="Blog">
-        <a href="/blog">
-          <button class="btn btn-ghost text-lg" aria-label="Blog">
-            <i class="fa-solid fa-pencil"></i>
-          </button>
-        </a>
-      </div>
-      <div class="tooltip tooltip-bottom" data-tip="Activity">
-        <a href="/activity">
-          <button class="btn btn-ghost text-lg" aria-label="Activity">
-            <i class="fa-solid fa-code"></i>
-          </button>
-        </a>
-      </div>
+      <p class="mb-2 text-lg">Hi, I'm Yoshio Sugiyama.<br />Applied AI Engineer / AI Platform Engineer at HPE Japan.</p>
+      {
+        config.links.length > 1 &&
+          config.links.map(item => (
+            <div class="tooltip tooltip-bottom" data-tip={item.name}>
+              <a href={item.url}>
+                <button class="btn btn-ghost text-lg" aria-label={item.name}>
+                  <i class={`fa-solid ${item.icon}`} />
+                </button>
+              </a>
+            </div>
+          ))
+      }
     </main>
   </HomeWallpaper>
 </BaseLayout>
