refactor: arrange tag position
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -43,8 +43,8 @@ const { remarkPluginFrontmatter } = await render(post)
         post.data.tags ? (
           <div class="inline mb-1">
             {post.data.tags.map(tag => (
-              <a href={`/tag/${tag}`}>
-                <div class="badge badge-accent badge-soft mr-2">{tag}</div>
+              <a href={`/tag/${tag}`} class="badge badge-primary badge-soft mr-2">
+                {tag}
               </a>
             ))}
           </div>
