--- a/src/pages/activity/data/[data].astro
+++ b/src/pages/activity/data/[data].astro
@@ -32,6 +32,7 @@ const { title } = post.data
       <article class="prose max-w-none">
         <h1>{title}</h1>
         <p class="text-sm">
+          <i class="fa-solid fa-file-lines"></i>
           Updated on {post.data.updated.toLocaleDateString()}
         </p>
         <hr />
