--- a/src/components/DataPost.astro
+++ b/src/components/DataPost.astro
@@ -13,6 +13,7 @@ const { post } = Astro.props
     <div class="card-body">
       <h2 class="card-title">{post.data.title}</h2>
       <p class="text-sm">
+        <i class="fa-solid fa-file-lines"></i>
         Updated on {post.data.updated.toLocaleDateString()}
       </p>
       <p>{post.data.description}</p>
