--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,9 @@ const links = navBarLinks
     <ToggleTheme />
     <main>
       <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
-      <p class="mb-2 text-lg">Hi, I'm Yoshio Sugiyama.<br />Applied AI Engineer / AI Platform Engineer at HPE Japan.</p>
+      <p class="mb-2 text-lg">
+        Hi, I'm Yoshio Sugiyama.<br />Applied AI Engineer / AI Platform Engineer at HPE Japan.
+      </p>
       {
         links.length > 1 &&
           links.map(link => (
