refactor: recent activity
Signed-off-by: Yoshio Sugiyama <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,7 +67,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
 
       <div class="card card-border shadow-lg my-10 bg-base-100/80">
         <div class="card-body">
-          <h2 class="card-title text-2xl mb-3">Activity</h2>
+          <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
           <div class="time-line-container">
             <TimeLine title="NVIDIA-Certified Associate - AI Infrastructure and Operations" date="2025/7" />
             <TimeLine
@@ -94,47 +94,6 @@ import TwitterFollow from "../components/TwitterFollow.astro"
               date="2024/3"
               link_title="知っておきたい「AIモデル開発」の裏側　専門家が考える“成功への近道”とは？"
               link_url="https://techtarget.itmedia.co.jp/tt/news/2403/07/news02.html"
-            />
-            <TimeLine
-              title="イベント登壇 - HPE Discover More 東京 2023"
-              date="2023/11"
-              link_title="AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践"
-              link_url="https://www.hpe.com/jp/ja/events/discover-more-tokyo.html"
-            />
-            <TimeLine
-              title="イベント登壇 - HPE HPC & AI フォーラム 2023 オンライン"
-              date="2023/9"
-              link_title="大規模言語モデル最前線！- HPE MLDEでLLMトレーニングをしてみた -"
-              link_url="https://h50146.www5.hpe.com/events/seminars/info/hpcai2023.html"
-            />
-            <TimeLine
-              title="メディア取材 - ソリューション紹介"
-              date="2023/5"
-              link_title="Kaggle Masterのエンジニアと考える、企業におけるAI開発の“真の”課題と解決策"
-              link_url="https://atmarkit.itmedia.co.jp/ait/articles/2305/19/news004.html"
-            />
-            <TimeLine
-              title="Informatica Certified Professional - Cloud Data and Application Integration"
-              date="2023/2"
-            />
-            <TimeLine title="Kaggle Competitions Master" date="2022/11" />
-            <TimeLine
-              title="Kaggle Multimodal Single-Cell Integration 🥈"
-              date="2022/11"
-              link_title="Private 41st Solution summary"
-              link_url="https://www.kaggle.com/competitions/open-problems-multimodal/discussion/366372"
-            />
-            <TimeLine
-              title="ML Study #6「ディープラーニングで実現するイノベーション」 LT 登壇"
-              date="2022/7"
-              link_title="非中央集権の連合学習について"
-              link_url="https://speakerdeck.com/imokuri/decentralized-federated-learning-with-blockchain"
-            />
-            <TimeLine
-              title="担当プロジェクト 公開事例"
-              date="2022/4"
-              link_title="群馬大学 - AI人材育成とAI研究を加速、文理融合の新学部が挑むDX"
-              link_url="https://www.hpe.com/jp/ja/customer-case-studies/services-gunma-u.html"
             />
           </div>
         </div>
