--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -53,6 +53,19 @@ import TwitterFollow from "../components/TwitterFollow.astro"
 
       <div class="card card-border shadow-lg my-10 bg-base-100/80">
         <div class="card-body">
+          <h2 class="card-title text-2xl mb-3">Resume</h2>
+          <div class="time-line-container">
+            <TimeLine
+              title="経歴紹介"
+              link_title="経歴や職務の紹介です"
+              link_url="/activity/resume/"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="card card-border shadow-lg my-10 bg-base-100/80">
+        <div class="card-body">
           <h2 class="card-title text-2xl mb-3">Hobby</h2>
           <div class="time-line-container">
             <TimeLine title="Ski" />
