--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,7 +20,10 @@ import TwitterFollow from "../components/TwitterFollow.astro"
         </div>
       </div>
       <h2 class="my-5 text-2xl">Yoshio Sugiyama - 杉山 禎夫</h2>
-      <div class="my-10 text-justify">日本ヒューレット・パッカードでインフラ/AIエンジニアをしています。</div>
+      <div class="my-10 text-justify">
+        日本ヒューレット・パッカードでインフラ/AIエンジニアをしています。<br />
+        技術・組織・ビジネスの3つの軸でAI活用を推進しています。
+      </div>
 
       <h2 class="my-5 text-2xl font-bold">Contact</h2>
       <img src="/mail.png" alt="email" />
@@ -55,11 +58,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
         <div class="card-body">
           <h2 class="card-title text-2xl mb-3">Resume</h2>
           <div class="time-line-container">
-            <TimeLine
-              title="経歴紹介"
-              link_title="経歴や職務の紹介です"
-              link_url="/activity/resume/"
-            />
+            <TimeLine title="経歴紹介" link_title="経歴や職務の紹介です" link_url="/activity/resume/" />
           </div>
         </div>
       </div>
