--- a/src/components/AllTags.astro
+++ b/src/components/AllTags.astro
@@ -3,6 +3,16 @@ import { getCollection } from "astro:content"
 
 const allPosts = await getCollection("blog")
 const tags = [...new Set(allPosts.map(post => post.data.tags).flat())].sort((a, b) => a.localeCompare(b))
+
+const tagCounts = allPosts
+  .flatMap(post => post.data.tags)
+  .reduce(
+    (acc: Record<string, number>, tag: string) => {
+      acc[tag] = (acc[tag] || 0) + 1
+      return acc
+    },
+    {} as Record<string, number>
+  )
 ---
 
 <details class="dropdown dropdown-end float-right z-40">
@@ -11,7 +21,9 @@ const tags = [...new Set(allPosts.map(post => post.data.tags).flat())].sort((a, 
     {
       tags.map(tag => (
         <li>
-          <a href={`/tag/${tag}`}>{tag}</a>
+          <a href={`/tag/${tag}`}>
+            {tag} <span class="text-xs">({tagCounts[tag]})</span>
+          </a>
         </li>
       ))
     }
