feat: NVIDIA-Certified Associate - Generative AI LLMs
Signed-off-by: Yoshio Sugiyama <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -81,6 +81,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
         <div class="card-body">
           <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
           <div class="time-line-container">
+            <TimeLine title="NVIDIA-Certified Associate - Generative AI LLMs" date="2026/1" />
             <TimeLine title="NVIDIA-Certified Associate - AI Infrastructure and Operations" date="2025/7" />
             <TimeLine
               title="担当プロジェクト 公開事例"
