--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,6 @@ import TwitterFollow from "../components/TwitterFollow.astro"
       <h2 class="my-5 text-2xl">Yoshio Sugiyama - 杉山 禎夫</h2>
       <div class="my-10 text-justify">
         日本ヒューレット・パッカードでインフラ/AIエンジニアをしています。<br />
-        技術・組織・ビジネスの3つの軸でAI活用を推進しています。
       </div>
 
       <h2 class="my-5 text-2xl font-bold">Contact</h2>
@@ -44,7 +43,6 @@ import TwitterFollow from "../components/TwitterFollow.astro"
           <h2 class="card-title text-2xl mb-3">Skill</h2>
           <div class="time-line-container">
             <TimeLine title="Machine Learning, Deep Learning, Generative AI" />
-            <TimeLine title="Data Management" />
             <TimeLine title="Kubernetes, OpenShift" />
             <TimeLine title="Automation, Ansible" />
             <TimeLine title="Python" />
@@ -69,7 +67,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
           <div class="time-line-container">
             <TimeLine title="Ski" />
             <TimeLine title="Futsal" />
-            <TimeLine title="Final Fantasy VII, Tactics" />
+            <TimeLine title="Final Fantasy VII" />
             <TimeLine title="F1" />
             <TimeLine title="Rugby" />
             <TimeLine title="Quiz" />
